results/SpecGenBench/4-shot/log-UglyNum-2023_11_05_21_48_29.txt
class UglyNum {
    //@ ensures \result <==> (\exists int i; 0 <= i && i < factors.length; n == 1 && factors[i] != 0);
    public static boolean isUgly(int n) {
        if (n <= 0) {
            return false;
        }
        int[] factors = {2, 3, 5};
        //@ maintaining 0 <= i && i <= factors.length;
        //@ maintaining (\forall int j; 0 <= j && j < i; factors[j] != 0);
        //@ decreases factors.length - i;
        for (int i = 0; i < factors.length; i++) {
            int factor = factors[i];
            //@ assert n % factor == 0 ==> (\exists int k; 0 <= k && k < i; n % factors[k] != 0);
            while (n % factor == 0) {
                n /= factor;
            }
        }
        return n == 1;
    }
}
/home/max/Documents/JMLGPT/tmp/UglyNum.java:2: error: cannot find symbol
    //@ ensures \result <==> (\exists int i; 0 <= i && i < factors.length; n == 1 && factors[i] != 0);
                                                           ^
  symbol:   variable factors
  location: class UglyNum
/home/max/Documents/JMLGPT/tmp/UglyNum.java:2: error: cannot find symbol
    //@ ensures \result <==> (\exists int i; 0 <= i && i < factors.length; n == 1 && factors[i] != 0);
                                                                                     ^
  symbol:   variable factors
  location: class UglyNum
2 errors

